--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <!-- contct us -->
     <section class="location">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.4632942531416!2d77.69626837409464!3d11.300808749304506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba96e52bc3f6c83%3A0x2ab8708d1c8b3a3!2sErode%20Arts%20and%20Science%20College!5e0!3m2!1sen!2sin!4v1715656705006!5m2!1sen!2sin"
+        src="#"
         width="600"
         height="450"
         style="border: 0"
@@ -49,8 +49,8 @@
           <div>
             <i class="bx bxs-phone-call"></i>
             <span
-              ><h5>+91 9676767677</h5>
-              <p>Dr.S.Riswana</p></span
+              ><h5>+91 0000000000</h5>
+              <p>Dr.Jhon</p></span
             >
           </div>
           <div>
@@ -63,8 +63,8 @@
           <div>
             <i class="bx bxs-home"></i>
             <span
-              ><h5>Erode Arts and Science College,</h5>
-              <p>Rign road junction,Rangampalayam</p></span
+              ><h5>MIT,</h5>
+              <p>America</p></span
             >
           </div>
         </div>
