--- a/contact.html
+++ b/contact.html
@@ -69,13 +69,12 @@
           </div>
         </div>
         <div class="contact-col">
-          <form action="" >
-            <input type="text" placeholder="Enter your Name " required>
-            <input type="email" placeholder="Enter Email address " required>
-            <input type="text" placeholder="Enter subject " required>
+          <form action="">
+            <input type="text" placeholder="Enter your Name " required />
+            <input type="email" placeholder="Enter Email address " required />
+            <input type="text" placeholder="Enter subject " required />
             <textarea rows="8" placeholder="Message..." required></textarea>
-            <button type="Submit" class=" hero-btn red-btn">Send Message</button>
-
+            <button type="Submit" class="hero-btn red-btn">Send Message</button>
           </form>
         </div>
       </div>
